# Quantum-Forge

./: ARCHITECTURE.md  BENCHMARK.md  Cargo.toml  ECOSYSTEM.md  LICENSE  QUANTUM_PROTOCOLS.md  README.md  USAGE_GUIDE.md  run_all_benchmarks.ps1  run_all_benchmarks.sh  run_benchmarks.rs  run_simple_benchmark.ps1
benches/: comprehensive_benchmarks.rs  protocol_benchmarks.rs
benchmark_results/: performance_dashboard.html  performance_data.csv
examples/: basic_qbft_example.rs  basic_qcap_example.rs  basic_qcbp_example.rs  basic_qcqp_example.rs  basic_qep_example.rs  basic_qesp_example.rs  basic_qkd_example.rs  basic_qnrp_example.rs  basic_qrng_example.rs  basic_qspp_example.rs  basic_qstp_example.rs  enhanced_fallback_example.rs  error_correction_demo.rs  grover_search_example.rs  hardware_integration_example.rs  integrated_qcbp_example.rs  manual_qpe.rs  phase_direct.rs  phase_estimation_example.rs  phase_fix.rs  phase_gate_test.rs  phase_test.rs  protocol_integration_demo.rs  qcap_capability_levels.rs  qesp_with_adapter_example.rs  qft_vs_qpe_benchmark.rs  qhep_hardware_integration_example.rs  qpe_debug.rs  qpe_final.rs  qpe_fixed.rs  qpe_optimized_test.rs  qpe_standalone.rs  qrng_with_qspp_example.rs  qstp_simulation_hooks_example.rs  quantum_resilient_entropy_example.rs  quantum_resilient_qkd_example.rs
src/: error.rs  integration_tests.rs  lib.rs
src/benchmark/: mod.rs  visualization.rs
src/consensus/: mod.rs  qbft.rs  qpcp.rs  qtsp.rs  qvcp.rs
src/core/: mod.rs  qmem.rs  qmp.rs  qstp.rs  quantum_algorithm.rs  quantum_register.rs  quantum_state.rs  qubit.rs  (+1 more)
(+34 files in other folders)
