[package]
name = "quantum_protocols"
version = "0.1.0"
edition = "2021"
description = "Quantum-inspired protocols for next-generation blockchain systems"
authors = ["QuantumForge Team"]
license = "MIT"

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.3"
byteorder = "1.4"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Network and concurrency
async-trait = "0.1"
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
lazy_static = "1.4.0"

# Cryptography
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"

# Quantum simulation
ndarray = "0.15"
num-complex = "0.4"
nalgebra = "0.32"

# Blockchain specific
hex = "0.4"
blake2 = "0.10"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
quickcheck = "1.0"
test-case = "3.1"

[[bench]]
name = "protocol_benchmarks"
harness = false

[features]
default = ["simulation"]
simulation = []
hardware = []
classical-fallback = [] 
memory_profiling = []

[[bin]]
name = "run_benchmarks"
path = "run_benchmarks.rs" 
